# Atlants

./: docker-compose.yml
app/: Dockerfile  README.md  handler.py  main.py  pyproject.toml  queue_manager.py  redis_manager.py  tasks.py  worker_manager.py
app/api/v1/: __init__.py
app/api/v1/routers/: tasks.py  workers.py
app/schemas/: task.py  worker.py
